kelvin:navigation sorted

--- a/departments.html
+++ b/departments.html
@@ -189,15 +189,24 @@
                     <ul class="navigation">
 						<li class="navigation__active"><a href="index.html"><i class="flaticon-bar-chart" title="Human resource dashboard"></i>Dashboard</a></li>
 						
-						<li class="navigation__active" title="Sacco Benki system users"><a href="systemuser.html"><i class="zmdi zmdi-whatsapp" ></i>WhatsApp Logs</a></li>
 						<li class="navigation__active" title="have a look at the departments" ><a href="departments.html"><i class="zmdi zmdi-swap" ></i>Transactions</a></li>
+
+						<li class="navigation__sub">
+                            <a href="#"><i class="zmdi zmdi-whatsapp"></i>WhatsApp  Logs<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
+                            <ul>
+                                <li><a href="#">All logs</a></li>
+								<li><a href="#">Completed sessions</a></li>
+								<li><a href="#">Abandoned sessions</a></li>
+                            </ul>
+						</li>
+
 						<li class="navigation__sub">
                             <a href="#"><i class="zmdi zmdi-comment-more"></i>Tickets<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
                             <ul>
-                                <li><a href="personel-client.html">Engaged</a></li>
-								<li><a href="service-provider-personel.html">On hold</a></li>
-								<li><a href="service-provider-personel.html">Unassigned</a></li>
-								<li><a href="service-provider-personel.html">Closed</a></li>
+                                <li><a href="#">Engaged</a></li>
+								<li><a href="#">On hold</a></li>
+								<li><a href="#">Unassigned</a></li>
+								<li><a href="#">Closed</a></li>
                             </ul>
 						</li>
 						
