Joan: add logout option to sidebar

--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@
 								<li><a href="#">All accounts</a></li>
 								<li><a href="#">Inactive accounts</a></li>
                             </ul>
-                        </li>
+						</li>
+						
+						<li class="navigation__sub">
+							<a href="#"><i class="zmdi zmdi-power"></i>Logout</a>
+						</li>
 						
                     </ul>
                 </div>
