Joan: add whatsapp image favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
-		<link rel='icon' href='demo/img/sacco-benki-fav.png' type='image/x-icon'/ >
+		<link rel='icon' href='demo/img/whats-app-fav.png' type='image/x-icon'/>
 		<title>WhatsApp | WhatsApp dashboard</title>
 
 		<!-- icon fonts -->
