Joan: add whatsApp logs pages

--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
 						<li class="navigation__sub">
                             <a href="#"><i class="zmdi zmdi-whatsapp"></i>WhatsApp Logs<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
                             <ul>
-                                <li><a href="#">All logs</a></li>
-								<li><a href="#">Completed sessions</a></li>
-								<li><a href="#">Abandoned sessions</a></li>
+                                <li><a href="all-logs.html">All logs</a></li>
+								<li><a href="completed-sessions.html">Completed sessions</a></li>
+								<li><a href="abandoned-sessions.html">Abandoned sessions</a></li>
+								<li><a href="unique-logs.html">Unique logs</a></li>
                             </ul>
 						</li>
 
