--- a/unique-logs.html
+++ b/unique-logs.html
@@ -221,6 +221,14 @@
 								<li><a href="inactive-accounts.html">Inactive accounts</a></li>
                             </ul>
 						</li>
+                        
+                        <li class="navigation__sub">
+                            <a href="#"><i class="zmdi zmdi-phone"></i>Customer Service<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
+                            <ul>
+								<li><a href="active-customer-service-accounts.html">Active</a></li>
+								<li><a href="inactive-customer-service-accounts.html">Inactive</a></li>
+                            </ul>
+						</li>
 						
 						<li class="navigation__sub">
 							<a href="#"><i class="zmdi zmdi-power"></i>Logout</a>
@@ -268,6 +276,7 @@
                                                 <th>Status</th>
                                                 <th>Sent Date</th>
                                                 <th>Amount</th>
+                                                <th>Actions</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -293,7 +302,12 @@
                                                 </td>
                                                 <td class="text-capitalize">
                                                     KES 500
-                                                </td>												
+                                                </td>	
+                                                <td>
+                                                    <a href="messagingLogs.html" class="btn btn-secondary btn-sm btn--icon-text">
+                                                        <i class="zmdi zmdi-eye"></i> View Logs
+                                                    </a>	
+                                                </td>											
                                             </tr>
                                             <tr>
                                                 <td class="width45">
@@ -316,7 +330,12 @@
                                                 </td>
                                                 <td class="text-capitalize">
                                                     KES 300
-                                                </td>													
+                                                </td>	
+                                                <td>
+                                                    <a href="messagingLogs.html" class="btn btn-secondary btn-sm btn--icon-text">
+                                                        <i class="zmdi zmdi-eye"></i> View Logs
+                                                    </a>	
+                                                </td>												
                                             </tr>
                                             <tr>
                                                 <td class="width45">
@@ -340,6 +359,11 @@
                                                 </td>
                                                 <td class="text-capitalize">
                                                     KES 200
+                                                </td>
+                                                <td>
+                                                    <a href="messagingLogs.html" class="btn btn-secondary btn-sm btn--icon-text">
+                                                        <i class="zmdi zmdi-eye"></i> View Logs
+                                                    </a>	
                                                 </td>													
                                             </tr>
                                             <tr>
@@ -363,7 +387,12 @@
                                                 </td>
                                                 <td class="text-capitalize">
                                                    KES 600
-                                                </td>												
+                                                </td>	
+                                                <td>
+                                                    <a href="messagingLogs.html" class="btn btn-secondary btn-sm btn--icon-text">
+                                                        <i class="zmdi zmdi-eye"></i> View Logs
+                                                    </a>	
+                                                </td>											
                                             </tr>
                                             <tr>
                                                 <td>
@@ -387,7 +416,12 @@
                                                 </td> 
                                                 <td class="text-capitalize">
                                                    KES 450
-                                                </td>													
+                                                </td>	
+                                                <td>
+                                                    <a href="messagingLogs.html" class="btn btn-secondary btn-sm btn--icon-text">
+                                                        <i class="zmdi zmdi-eye"></i> View Logs
+                                                    </a>	
+                                                </td>												
                                             </tr>
                                         </tbody>
                                     </table>
