--- a/messagingLogs.html
+++ b/messagingLogs.html
@@ -220,6 +220,14 @@
 								<li><a href="all-accounts.html">All accounts</a></li>
 								<li><a href="inactive-accounts.html">Inactive accounts</a></li>
                             </ul>
+                        </li>
+                        
+                        <li class="navigation__sub">
+                            <a href="#"><i class="zmdi zmdi-phone"></i>Customer Service<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
+                            <ul>
+								<li><a href="active-customer-service-accounts.html">Active</a></li>
+								<li><a href="inactive-customer-service-accounts.html">Inactive</a></li>
+                            </ul>
 						</li>
 						
 						<li class="navigation__sub">
