Joan: add daterange picker

--- a/unique-logs.html
+++ b/unique-logs.html
@@ -258,6 +258,16 @@
 								
 							</div>
                         </div>
+                        <div class="col-md-7 col-sm-12">                                       
+                            <div class="actions date_container">
+                                <div id="reportrange"
+                                    style="background: #f3f3f3; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+                                    <i class="ti-calendar"></i>&nbsp;
+                                    <span></span> <i class="fa fa-caret-down"></i>
+                                </div>  
+                                <button class="btn btn-success d-none text-nowrap " id="date-reset" onclick="reset_date()">Reset Date</button>
+                            </div>
+                        </div>
 					</div>
                 </header>
                 
@@ -544,6 +554,7 @@
         <script src="vendors/salvattore/salvattore.min.js"></script>
         <script src="vendors/sparkline/jquery.sparkline.min.js"></script>
         <script src="vendors/moment/moment.min.js"></script>
+        <script src="vendors/daterangepicker/daterangepicker.min.js"></script>
         <script src="vendors/fullcalendar/fullcalendar.min.js"></script>
 		
 		 <script src="vendors/jquery-mask-plugin/jquery.mask.min.js"></script>
