Joan: fix tickets pages

--- a/ticktes.html
+++ b/ticktes.html
@@ -299,7 +299,7 @@
                         <div class="toolbar toolbar--inner mb-3">
                             <div class="toolbar__label"><strong>John Mwakili</strong></div>
 
-                            <div class="actions toolbar__actions">
+                            <div class="actions toolbar__actions d-none">
                                 <a href="#" class="actions__item zmdi zmdi-plus"></a>
                             </div>
                         </div>
