Joan: add close ticket button

--- a/ticktes.html
+++ b/ticktes.html
@@ -415,6 +415,9 @@
                                     <a href="#" class="actions__item zmdi zmdi-time"></a>
                                     <a href="#" class="actions__item zmdi zmdi-print"></a>
                                     <a href="#" class="actions__item zmdi zmdi-refresh"></a>
+                                    <button class="btn btn-danger btn--icon-text ml-2 deactivate-user" title="deactvate this account"  data-toggle="modal" data-target="#deactivate-user">
+                                        <i class="zmdi zmdi-block"></i> Close Ticket
+                                    </button>
                                     <div class="dropdown actions__item d-none">
                                         <i class="actions__item zmdi zmdi-more-vert" data-toggle="dropdown"></i>
                                         <div class="dropdown-menu dropdown-menu-right">
