Joan: change card body colors

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 						<a href="transactions.html" class="card calc-34">
 							<div class="card-body bg-primary">
 								<div class="d-flex align-items-center">
-									<div class="icon-in-bg bg-orange text-white rounded-circle">
+									<div class="icon-in-bg bg-orange text-white rounded-circle d-none">
 										<span class=""><i class="font-30 mdi mdi-cash-multiple"></i></span>
 									</div>
 									<div class="ml-4">
@@ -358,7 +358,7 @@
 
 					<div class="col-lg-3 col-md-6">
 						<a class="card calc-34" href="#!">
-							<div class="card-body bg-danger">
+							<div class="card-body bg-primary">
 								<div class="d-flex align-items-center">
 									<div class="icon-in-bg text-white rounded-circle bg-orange text-uppercase d-none">
 										<span class=""><i><img src="demo/img/icons/week.svg"></i></span>
