Joan: change card details

--- a/index.html
+++ b/index.html
@@ -357,6 +357,21 @@
 					</div>
 
 					<div class="col-lg-3 col-md-6">
+						<a href="ticktes.html" class="card calc-34">
+							<div class="card-body bg-primary">
+								<div class="d-flex align-items-center">
+									<div class="icon-in-bg text-white rounded-circle bg-danger text-uppercase">
+										<span class=""><i class="zmdi zmdi-comment-more"></i></span>									</div>
+									<div class="ml-4">
+										<span class="font-12 text-white">Pending Tickets</span>
+										<h4 class="mt-1 mb-0 font-weight-medium text-white">18 Tickets</h4>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-lg-3 col-md-6 d-none">
 						<a class="card calc-34" href="#!">
 							<div class="card-body bg-primary">
 								<div class="d-flex align-items-center">
