Joan: change card and chart color

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<a href="transactions.html" class="card calc-34">
-							<div class="card-body bg-primary">
+							<div class="card-body" style="background-color: #138c7e;">
 								<div class="d-flex align-items-center">
 									<div class="icon-in-bg bg-orange text-white rounded-circle d-none">
 										<span class=""><i class="font-30 mdi mdi-cash-multiple"></i></span>
@@ -360,7 +360,7 @@
 						<a href="ticktes.html" class="card calc-34">
 							<div class="card-body bg-primary">
 								<div class="d-flex align-items-center">
-									<div class="icon-in-bg text-white rounded-circle bg-danger text-uppercase">
+									<div class="icon-in-bg text-white rounded-circle text-uppercase" style="background-color: #138c7e;">
 										<span class=""><i class="zmdi zmdi-comment-more"></i></span>									</div>
 									<div class="ml-4">
 										<span class="font-12 text-white">Pending Tickets</span>
