Joan: add color codes for sessions

--- a/index.html
+++ b/index.html
@@ -445,27 +445,27 @@
                                 <h4 class="text-black font-weight-medium">Ticket Sessions</h4>
                                 <small class="mb-0 pb-0 d-none">22</small>
 								<div class="d-flex justify-content-start process">
-									<div class="p-engaged"></div>
-									<div class="p-onhold"></div>
-									<div class="p-unassigned"></div>
-									<div class="p-closed"></div>
+									<div class="p-engaged bg-success"></div>
+									<div class="p-onhold bg-light"></div>
+									<div class="p-unassigned bg-info"></div>
+									<div class="p-closed bg-danger"></div>
 
 								</div>
 								<div class="d-flex justify-content-start align-items-center">
 									
-									<div class="engaged"></div>	
+									<div class="engaged bg-success"></div>	
 										<div class="m-2">
 											<small>Engaged</small>
 										</div>
-									<div class="onhold"></div>
+									<div class="onhold bg-light"></div>
 										<div class="m-2">
 											<small>Onhold</small>
 										</div>
-									<div class="unassigned"></div>
+									<div class="unassigned bg-info"></div>
 										<div class="m-2">
 											<small>Unassigned</small>
 										</div>
-									<div class="closed"></div>
+									<div class="closed bg-danger"></div>
 										<div class="m-2">
 											<small>Closed</small>
 										</div>
@@ -516,17 +516,17 @@
                                 <h4 class="text-black font-weight-medium">Total Sessions</h2>
                                 <small class="mb-0 pb-0 d-none">22</small>
 								<div class="d-flex justify-content-start total-sessions">
-									<div class="t-completed"></div>
-									<div class="t-abandoned"></div>
+									<div class="t-completed bg-success"></div>
+									<div class="t-abandoned bg-danger"></div>
 
 								</div>
 								<div class="d-flex justify-content-start align-items-center">
 									
-									<div class="completed"></div>	
+									<div class="completed bg-success"></div>	
 										<div class="m-2">
 											<small>Completed Sessions</small>
 										</div>
-									<div class="abandoned"></div>
+									<div class="abandoned bg-danger"></div>
 										<div class="m-2">
 											<small>Abandoned Sessions</small>
 										</div>
