kelvin: some changes

--- a/transactions.html
+++ b/transactions.html
@@ -67,7 +67,7 @@
                 <div class="header__logo hidden-sm-down">
 					<a href="index.html"><img class="the-logo" src="demo/img/logo-files/logo-white-notxt.png"></a>
 					<h1>
-                        <a href="index.html" class="mb-3">Nouveta LTD</a>
+                        <a href="index.html" class="mb-3">Kimisitu Sacco</a>
                         <p class="mb-0 text-white font-weight-light text-capitalize font-12px">WhatsApp transactions</p>
                     </h1>
                 </div>
@@ -467,8 +467,8 @@
 				</div>
 			
                 <footer class="footer hidden-xs-down">
-					<center><a class="nouveta-logoo" href="https://nouveta.tech/"><img src="demo/img/logo-files/logo2.png" target="new"></center></a></center>
-                    <p>Powered by<a href="https://nouveta.tech/" target="new"> Nouveta LTD</a></p>
+					<center><a class="nouveta-logoo" href="#"><img src="demo/img/logo-files/logo2.png" target="new"></center></a></center>
+                    <p>Powered by<a href="https://nouveta.tech/" target="new"> Levetot LTD</a></p>
                 </footer>
             </section>
            
