kelvin: perfomance graph

--- a/transactions.html
+++ b/transactions.html
@@ -285,7 +285,7 @@
                                                     RS-2021-98742
                                                 </td>
                                                 <td class="the_user">
-                                                    Payment for Business Permit
+                                                    Account deposit
                                                 </td>
                                                 <td>
                                                     <span>25 Jul 2019 12:56</span>
@@ -310,7 +310,7 @@
                                                     RS-2021-98741
                                                 </td>
                                                 <td class="the_user">
-                                                    Paid for Seasonal Parking - Motorbike
+                                                    Loan repayement
                                                 </td>
                                                 <td>
                                                     <span>25 Jul 2019 12:56</span>
@@ -335,7 +335,8 @@
                                                     RS-2021-98743
                                                 </td>
                                                 <td class="the_user">
-                                                    Payment for Food Handlers License
+                                                    Fosa Deposit
+
                                                 </td>
                                                 <td>
                                                     <span>25 Jul 2019 12:56</span>
@@ -360,7 +361,7 @@
                                                     RS-2021-98744
                                                 </td>
                                                 <td class="the_user">
-                                                    Payment for Land Rate
+                                                    Account withdrawal
                                                 </td>
                                                 <td>
                                                     <span>25 Jul 2019 12:56</span>
@@ -385,7 +386,7 @@
                                                     RS-2021-98745
                                                 </td>
                                                 <td class="the_user">
-                                                    Payment for a Market Stall
+                                                    Dividend withdrawal
                                                 </td>
                                                 <td>
                                                     <span>25 Jul 2019 12:56</span>
