klevin: side bart has been updated

--- a/transactions.html
+++ b/transactions.html
@@ -206,14 +206,14 @@
 						<li class="navigation__sub">
                             <a href="#"><i class="zmdi zmdi-comment-more"></i>Tickets<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
                             <ul>
-                                <li><a href="#">Engaged</a></li>
-								<li><a href="#">On hold</a></li>
-								<li><a href="#">Unassigned</a></li>
-								<li><a href="#">Closed</a></li>
+                                <li><a href="tickets-engaged.html">Engaged</a></li>
+								<li><a href="tickets-hold.html">On hold</a></li>
+								<li><a href="tickets-Unassigned.html">Unassigned</a></li>
+								<li><a href="tickets-closed.html">Closed</a></li>
                             </ul>
-                        </li>
-                        
-                        <li class="navigation__sub">
+						</li>
+							 
+						<li class="navigation__sub">
                             <a href="#"><i class="zmdi zmdi-headset-mic"></i>Customer Service<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
                             <ul>
 								<li><a href="active-customer-service-accounts.html">Active</a></li>
@@ -228,8 +228,7 @@
 								<li><a href="all-accounts.html">All accounts</a></li>
 								<li><a href="inactive-accounts.html">Inactive accounts</a></li>
                             </ul>
-                        </li>
-
+						</li>
 						<li class="navigation__sub">
 							<a href="#"><i class="zmdi zmdi-power"></i>Logout</a>
 						</li>
