--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
 						<li class="navigation__sub">
                             <a href="#"><i class="zmdi zmdi-comment-more"></i>Tickets<i class="zmdi zmdi-caret-down drop-down-icon"></i></a>
                             <ul>
-                                <li><a href="#">Engaged</a></li>
-								<li><a href="#">On hold</a></li>
-								<li><a href="#">Unassigned</a></li>
-								<li><a href="#">Closed</a></li>
+                                <li><a href="tickets-engaged.html">Engaged</a></li>
+								<li><a href="tickets-hold.html">On hold</a></li>
+								<li><a href="tickets-Unassigned.html">Unassigned</a></li>
+								<li><a href="tickets-closed.html">Closed</a></li>
                             </ul>
 						</li>
 							 
